exploratory data analysis

--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -15,7 +15,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "returns tuple of \n",
+    "(1) renewal ratio for given major line\n",
+    "(2) total number of elements\n",
+    "(3) number of not null elements in 'renewed yorn'\n",
+    "'''\n",
+    "def renewal_ratio(arr): \n",
+    "    c = Counter(arr) \n",
+    "    ratio = float(c['Y'])/(c['Y']+c['N'])\n",
+    "    total = len(arr)\n",
+    "    not_null = c['Y']+c['N']\n",
+    "    return (ratio, total, not_null)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renewal_by_major = train_data.groupby(by='major_line_instance_id', as_index=True).agg({'renewed_yorn':renewal_ratio})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -384,96 +427,13 @@
        "[12459 rows x 1 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.groupby(by='major_line_instance_id', as_index=True).agg({'renewed_yorn':renewal_ratio})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12459"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(idxs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "returns tuple of \n",
-    "(1) renewal ratio for given major line\n",
-    "(2) total number of elements\n",
-    "(3) number of not null elements in 'renewed yorn'\n",
-    "'''\n",
-    "def renewal_ratio(arr): \n",
-    "    c = Counter(arr) \n",
-    "    ratio = float(c['Y'])/(c['Y']+c['N'])\n",
-    "    total = len(arr)\n",
-    "    not_null = c['Y']+c['N']\n",
-    "    return (ratio, total, not_null)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('024E9A6FA0BF0F74497C3F37DCDA8F144507E45D4255B30BBEA6396F445F9F23', 9045),\n",
-       " ('060EAC821422B2EA602FC42248ED5B265E59F017D1B556F4CB3F721DA8B81CB8', 2704),\n",
-       " ('0BA75FF2059D4BF1756FBB73287ABEEF685569789D4AB908788DA7DCFF88DB27', 766)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('024E9A6FA0BF0F74497C3F37DCDA8F144507E45D4255B30BBEA6396F445F9F23', 9045),\n",
-       " ('060EAC821422B2EA602FC42248ED5B265E59F017D1B556F4CB3F721DA8B81CB8', 2704),\n",
-       " ('0BA75FF2059D4BF1756FBB73287ABEEF685569789D4AB908788DA7DCFF88DB27', 766)]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = Counter(train_data['major_line_instance_id'])\n",
-    "c.most_common(3)"
+    "renewal_by_major"
    ]
   },
   {
