--- a/code/exploration.ipynb
+++ b/code/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -79,12 +79,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "# exporting testing data\n",
     "test_data = path + 'data/scoring_set.tsv'\n",
@@ -100,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -112,31 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "182"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = train_data.loc[:, (train_data != train_data.iloc[0]).any()] \n",
     "train_data = train_data.dropna(axis=1, how='all')\n",
-    "train_data = train_data.dropna(axis=1, thresh=thresh)"
+    "train_data = train_data.dropna(axis=1, thresh=thresh)\n",
+    "# dropping rows where renewed_yorn is NaN\n",
+    "renewed_nan = pd.isna(train_data['renewed_yorn'])\n",
+    "train_data = train_data[~renewed_nan]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -157,12 +145,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "# date columns in testing set\n",
     "test_data[dates_columns] = test_data[dates_columns].applymap(transform_date)\n",
@@ -177,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -200,13 +184,9 @@
     "\n",
     "# missing values\n",
     "train_data[yorn_columns] = train_data[yorn_columns].fillna('?')\n",
-    "test_data[yorn_columns] = test_data[yorn_columns].fillna('?')\n",
     "\n",
     "yorn_encoder = LabelEncoder()\n",
     "yorn_encoder.fit([\"Y\", \"N\", \"=\", '?'])\n",
-    "\n",
-    "test_data[yorn_columns] = test_data[yorn_columns] \\\n",
-    "                        .apply(lambda x: yorn_encoder.transform(x))\n",
     "    \n",
     "train_data[yorn_columns] = train_data[yorn_columns] \\\n",
     "                        .apply(lambda x: yorn_encoder.transform(x))\n",
@@ -215,40 +195,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
-    "# name columns\n",
-    "name_columns = [x for x in list(train_data) if 'name' in x]\n",
-    "\n",
-    "train_data[name_columns] = train_data[name_columns].fillna('?')\n",
-    "test_data[name_columns] = test_data[name_columns].fillna('?')\n",
-    "\n",
-    "# initialize encoders\n",
-    "name_dict = defaultdict(LabelEncoder)\n",
-    "\n",
-    "for c in name_columns:\n",
-    "    name_dict[c].fit(train_data[c].append(test_data[c], ignore_index=True))\n",
-    "\n",
-    "test_data[name_columns] = test_data[name_columns] \\\n",
-    "                        .apply(lambda x: name_dict[x.name].transform(x))\n",
-    "    \n",
-    "train_data[name_columns] = train_data[name_columns] \\\n",
-    "                        .apply(lambda x: name_dict[x.name].transform(x))\n",
-    "    \n",
-    "features_list += name_columns"
+    "test_data[yorn_columns] = test_data[yorn_columns].fillna('?')\n",
+    "test_data[yorn_columns] = test_data[yorn_columns] \\\n",
+    "                        .apply(lambda x: yorn_encoder.transform(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# numerical columns\n",
@@ -274,10 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_columns = [x.lower() for x in num_columns]\n",
@@ -287,76 +243,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 96,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# type columns\n",
-    "type_columns = [x for x in list(train_data) if 'type' in x]\n",
-    "\n",
-    "train_data[type_columns] = train_data[type_columns].fillna('?')\n",
-    "test_data[type_columns] = test_data[type_columns].fillna('?')\n",
+    "remaining_features = [x for x in list(train_data) if (x not in features_list) \\\n",
+    "                         and ('key' not in x) and ('id' not in x) and ('date' not in x)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remaining columns\n",
+    "train_data[remaining_features] = train_data[remaining_features].fillna('?')\n",
     "\n",
     "# initialize encoders\n",
-    "type_dict = defaultdict(LabelEncoder)\n",
+    "enc_dict = defaultdict(LabelEncoder)\n",
     "\n",
-    "for c in type_columns:\n",
-    "    type_dict[c].fit(train_data[c].append(test_data[c], ignore_index=True))\n",
+    "for c in remaining_features:\n",
+    "    enc_dict[c].fit(train_data[c])\n",
+    "    #enc_dict[c].fit(train_data[c].append(test_data[c], ignore_index=True))\n",
     "\n",
-    "test_data[type_columns] = test_data[type_columns] \\\n",
-    "                        .apply(lambda x: type_dict[x.name].transform(x))\n",
+    "train_data[remaining_features] = train_data[remaining_features] \\\n",
+    "                        .apply(lambda x: enc_dict[x.name].transform(x))\n",
     "    \n",
-    "train_data[type_columns] = train_data[type_columns] \\\n",
-    "                        .apply(lambda x: type_dict[x.name].transform(x))\n",
-    "    \n",
-    "features_list += type_columns"
+    "features_list += remaining_features"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
-    "# code columns\n",
-    "code_columns = [x for x in list(train_data) if 'code' in x]\n",
-    "\n",
-    "train_data[code_columns] = train_data[code_columns].fillna('?')\n",
-    "test_data[code_columns] = test_data[code_columns].fillna('?')\n",
-    "\n",
-    "# initialize encoders\n",
-    "code_dict = defaultdict(LabelEncoder)\n",
-    "\n",
-    "for c in code_columns:\n",
-    "    code_dict[c].fit(train_data[c].append(test_data[c], ignore_index=True))\n",
-    "\n",
-    "test_data[code_columns] = test_data[code_columns] \\\n",
-    "                        .apply(lambda x: code_dict[x.name].transform(x))\n",
-    "    \n",
-    "train_data[code_columns] = train_data[code_columns] \\\n",
-    "                        .apply(lambda x: code_dict[x.name].transform(x))\n",
-    "    \n",
-    "features_list += code_columns"
+    "test_data[remaining_features] = test_data[remaining_features].fillna('?')\n",
+    "test_data[remaining_features] = test_data[remaining_features] \\\n",
+    "                        .apply(lambda x: enc_dict[x.name].transform(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "remaining_features = [x for x in list(train_data) if x not in features_list]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -368,20 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "features_list = list(set(features_list))\n",
-    "final_train_dataset = train_data_subset[features_list]\n",
-    "#final_train_dataset = final_train_dataset[(final_train_dataset['renewed_yorn'] != 1)]"
+    "final_train_dataset = train_data_subset[features_list]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +331,7 @@
        "            oob_score=False, random_state=42, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -429,16 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.15501029039180236"
+       "0.15829546625032995"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,6 +380,20 @@
    "source": [
     "log_loss(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
